[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple, lightweight raytracing library"
repository = "https://github.com/sigurd4/raytracing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moddef = "0.2.2"
array_math = "0.2.13"
num = "0.4.1"
option_trait = "0.1.5"

[dev-dependencies]
image = "0.24.8"