[package]
name = "raytracing"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A simple, lightweight raytracing library"
repository = "https://github.com/sigurd4/raytracing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moddef = "0.2.2"
num = "0.4.1"

[dev-dependencies]
image = "0.25.6"